cleaned up a little